--- a/style.css
+++ b/style.css
@@ -123,14 +123,14 @@ ul{padding: 0; margin: 0; list-style-type: none;}
 #updates{width: 630px; margin: 10px auto; font-family: "Georgia", "Times New Roman", "Times", "serif"; font-size: 14px; color: #3F3D3D;}
 #updates #header{border-bottom: 1px solid #999; color: #3F3D3D;}
 #updates #header h1{width: 400px; margin-right: 30px; float: left; font-family: "Arial", "sans-serif"; text-transform: uppercase; font-size: 30px; text-indent: -1024px; background: transparent url('static/img/provost-update.jpg') no-repeat 0 -20px;}
-#updates #header .date{margin-left: 430px; position: relative; top: 20px; text-align: right;}
+#updates #sidebar .date{text-align: center;}
 .ie7 #updates #header .date{top: 15px;}
 #updates #content{width: 390px; float: left;}
 #updates #sidebar{margin-left: 410px;}
-#updates #sidebar #tony-waldrop div{display: none;}
+#updates #content #tony-waldrop div{display: none;}
 #updates #sidebar #feedback{}
-#updates #sidebar #feedback h2{font-size: 15px; color: #666; text-align: center; padding: 10px; margin: 10px auto; border-top: 1px solid #999; width: 70%;}
-#updates #sidebar #feedback a{display: block; height: 113px; width: 212px; background: transparent url('static/img/feedback.jpg') no-repeat; text-indent: -2048px;}
+#updates #sidebar h2{font-size: 14px; color: #666; text-align: center; padding: 10px; margin: 5px auto;}
+#updates #sidebar #feedback {display: block; height: 113px; width: 212px; background: transparent url('static/img/feedback.jpg') no-repeat; text-indent: -2048px;}
 #updates #footer{border-top: 1px solid #ddd; color: #A1A1A1; font-size: 11px;  font-family: "Lucida Grande", "Arial", "sans-serif";}
 #updates #footer ul{padding: 0; margin: 0 0 5px 0;  font-family: "Lucida Grande", "Arial", "sans-serif";}
 #updates #footer ul li{display: inline;}
