--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ Tags: Thematic
 */
 
 /*/ Global Styles /*/
-#header h1 a{font-size: 37px; font-family: "Adobe Caslon Pro", "Georgia", "serif"; color: #313130;}
+#header h1 a{font-size: 37px; font-family: "Georgia", "serif"; color: #313130;}
+.firefox #header h1{position: relative; top: 3px;}
+.ie7 #header h1{position: relative; top: 3px;}
+.ie7 #header #menu{padding-bottom: 1em;}
+.ie8 #header h1{position: relative; top: 3px;}
+.ie8 #header #menu{}
 body{color: #333333;}
 a{color: #333; font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";}
 h2, h3, h4{font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif"; color: #333;}
