--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ ul{padding: 0; margin: 0; list-style-type: none;}
 
 /*/ Page Styles /*/
 .page-content{line-height: 1.5em;}
-.page-content h2{font-size: 27px; font-weight: 300; margin: 0 0 10px 0; padding: 0;}
+.page-content h2{font-size: 27px; font-weight: 300; margin: 15px 0 10px 0; padding: 0;}
 .page-content article{}
 .page-content article a{color: #953801;}
 .page-content article h1{font-size: 22px; font-weight: bold; padding: 0; margin: 0;}
@@ -114,7 +114,7 @@ ul{padding: 0; margin: 0; list-style-type: none;}
 .page-content #sub-pages ul li{margin: 8px 0; padding: 0;}
 .page-content #sub-pages ul li a{font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif"; font-size: 16px;}
 
-.faculty-award-programs{margin: 20px 0;}
+.faculty-award-programs{margin: 10px 0;}
 .faculty-award-programs ul{padding: 0; margin: 0; list-style-type: none;}
 .faculty-award-programs ul li{display: block; float: left; margin-right: 10px; width: 150px; height: 185px;}
 .faculty-award-programs ul li a{text-decoration: none; color: #333; font-weight: bold; font-size: 14px; font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";}
