--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 #home #top #searchform label{display: block; font-weight: normal; color: #c14d00; font-family: "Georgia", "serif"; text-decoration: underline;}
 #home #top #searchform input[type='submit']{width: 20%;}
 #home #top #searchform input[type='search']{width: 75%;}
-#home #middle{margin: 30px 0 10px 0;}
+#home #middle{margin: 30px 0 10px 0; padding:20px 0 0; border-top: 1px solid #e1e1e1; border-bottom: 1px solid #e1e1e1; }
 #home #middle ul{padding: 0; margin: 0; list-style-type: none;}
 #home #middle ul li{}
 #home #middle ul li a{text-decoration: none; font-size: 16px; font-weight: normal;}
 #home #middle ul li a .title{}
-#home #bottom{border-top: 1px solid #e1e1e1; padding-top: 10px;}
+#home #bottom{ padding-top: 10px;}
 #home #bottom #links{border-right: 1px solid #e1e1e1;}
 #home h2{font-size: 10px; text-transform: uppercase; font-weight: normal; letter-spacing: 2px;}
 #home-colleges h3,
