--- a/style.css
+++ b/style.css
@@ -85,6 +85,16 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 #home #widgets{padding-left: 15px;}
 
 
+/*/ Profile page /*/
+#profile { width:120px; padding:5px 25px 5px 5px; float:left; font-size:11px; line-height:1.4; }
+#profile strong { display:block; font-size:12px; padding:4px 0 2px; }
+#profile img { 
+	padding:5px; display:block; background-color: white;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px; -moz-box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 6px; 
+	 -moz-border-radius: 5px; -webkit-border-radius: 5x; border-radius:5px;  }
+.msie #profile img { border:1px solid #C5C5C5; }
+
+
 /*/ Search results page /*/
 #search-results .hentry{margin: 10px 0; clear: both;}
 #search-results .hentry h2{ margin: 0 0 10px 0; padding: 0;}
@@ -112,7 +122,7 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 
 /*/ Page Styles /*/
 .page-content{line-height: 1.5em;}
-.page-content h2{font-size: 27px; font-weight: 300; margin: 15px 0 10px 0; padding: 0;}
+.page-content h2{font-size: 27px; font-weight: 300; margin: 15px 0; padding: 0;}
 .page-content article{}
 .page-content article a{color: #953801;}
 .page-content article h1{font-size: 22px; font-weight: bold; padding: 0; margin: 0;}
