--- a/style.css
+++ b/style.css
@@ -167,14 +167,14 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 #widgets ul{font-size: 12px; list-style-type: none; padding: 0; margin: 0;}
 #widgets a{color: #000;}
 #widgets h2{font-size: 16px; font-weight: bold;}
-#widgets h3{font-size: 16px; font-weight: normal;}
+#widgets h3{font-size: 16px; font-weight: normal; color: #C14D00;}
 #widgets h4{font-size: 14px; font-weight: bold;}
 #widgets ul,
 #widgets ol{padding: 0; margin: 0;}
 #widgets ul{list-style-type: none;}
 
-#widgets .blogroll{font-size: 14px;}
-#widgets .blogroll a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
+#widgets .blogroll, #widgets .menu{font-size: 14px;}
+#widgets .blogroll a, #widgets .menu a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
 
 #widgets .events h4{display: none;}
 #widgets .events,
