--- a/style.css
+++ b/style.css
@@ -138,6 +138,10 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 .faculty-award-programs ul li{display: block; float: left; margin-right: 10px; width: 150px; height: 185px;}
 .faculty-award-programs ul li a{text-decoration: none; color: #333; font-weight: bold; font-size: 14px; font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";}
 .faculty-award-programs .caption{color: #333;}
+.programs a img { display:block; }
+.programs a span { display:block; padding-top:3px; }
+#faculty-resources .alignnone { margin-left:10px; }
+
 
 #forms-policies-procedures h3{}
 #forms-policies-procedures .form-list{margin-bottom: 15px;}
