--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Office of the Provost, UCF
 Author: UCF Web Communications
 Template: thematic
-Version: 1.0
+Version: v1.0.0
 Tags: Thematic
 .
 */
