Added github url.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*   
 Theme Name: Office of the Provost, UCF
 Author: UCF Web Communications
+Github Theme URI: https://github.com/UCF/Provost
 Template: thematic
 Version: v1.1.0
 Tags: Thematic
