--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h2, h3, h4{font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif"; co
 .doc, .docx, .docm { background-image: url('static/img/document-doc.png'); }
 .ppt, .pptx, .pptm { background-image: url('static/img/document-ppt.png'); }
 .xls, .xlsx, .xlsm, .xlt, .xltx, .xltm { background-image: url('static/img/document-xls.png'); }
+.php, .html, .shtml, .asp { background-image: url('static/img/document-web.png'); }
 .missing    { background-image: url('static/img/document-missing.png'); }
 
 .required{font-weight: bold; font-size: 12px; color: #A00;}
