Updated name and version number

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*   
-Theme Name: Office of the Provost, UCF
+Theme Name: Women's Research Center (Provost)
 Author: UCF Web Communications
-Github Theme URI: https://github.com/UCF/Provost
+Github Theme URI: https://github.com/UCF/WRC-Provost
 Template: thematic
-Version: v1.1.7
+Version: v1.0.0
 Tags: Thematic
 .
 */
