--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*   
-Theme Name: Women's Research Center (Provost)
+Theme Name: Women's Research Center (WRC)
 Author: UCF Web Communications
-Github Theme URI: https://github.com/UCF/WRC-Provost
+Github Theme URI: https://github.com/UCF/WRC-WRC
 Template: thematic
 Version: v1.0.0
 Tags: Thematic
@@ -156,13 +156,13 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 
 #forms-policies-procedures h3{}
 #forms-policies-procedures .form-list{margin-bottom: 15px;}
-.provost_form-list { margin-bottom:15px; padding-left:50px; }
+.wrc_form-list { margin-bottom:15px; padding-left:50px; }
 
 /*/ Update page styles /*/
 .ie7 #updates{}
 #updates{width: 630px; margin: 10px auto; font-family: "Georgia", "Times New Roman", "Times", "serif"; font-size: 14px; color: #3F3D3D;}
 #updates #header{border-bottom: 1px solid #999; color: #3F3D3D;}
-#updates #header h1{width: 400px; margin-right: 30px; float: left; font-family: "Arial", "sans-serif"; text-transform: uppercase; font-size: 30px; text-indent: -1024px; background: transparent url('static/img/provost-update.jpg') no-repeat 0 -20px;}
+#updates #header h1{width: 400px; margin-right: 30px; float: left; font-family: "Arial", "sans-serif"; text-transform: uppercase; font-size: 30px; text-indent: -1024px; background: transparent url('static/img/wrc-update.jpg') no-repeat 0 -20px;}
 #updates #sidebar .date{text-align: center;}
 .ie7 #updates #header .date{top: 15px;}
 #updates #content{width: 390px; float: left;}
