--- a/style.css
+++ b/style.css
@@ -184,33 +184,33 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 
 
 /*/ Widget Styles /*/
-#widgets ul{font-size: 12px; list-style-type: none; padding: 0; margin: 0;}
-#widgets a{color: #000;}
-#widgets h2{font-size: 16px; font-weight: bold;}
-#widgets h3{font-size: 16px; font-weight: normal; color: #C14D00;}
-#widgets h4{font-size: 14px; font-weight: bold;}
-#widgets ul,
-#widgets ol{padding: 0; margin: 0;}
-#widgets ul{list-style-type: none;}
+.widgets ul{font-size: 12px; list-style-type: none; padding: 0; margin: 0;}
+.widgets a{color: #000;}
+.widgets h2{font-size: 16px; font-weight: bold;}
+.widgets h3{font-size: 16px; font-weight: normal; color: #C14D00;}
+.widgets h4{font-size: 14px; font-weight: bold;}
+.widgets ul,
+.widgets ol{padding: 0; margin: 0;}
+.widgets ul{list-style-type: none;}
 
-#widgets .blogroll, #widgets .menu{font-size: 14px;}
-#widgets .blogroll a, #widgets .menu a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
+.widgets .blogroll, .widgets .menu{font-size: 14px;}
+.widgets .blogroll a, .widgets .menu a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
 
-#widgets .events h4{display: none;}
-#widgets .events,
-#widgets .events a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
-#widgets .events ol{list-style-type: none;}
-#widgets .events li{margin: 15px 0;}
-#widgets .events .date{text-align: center; font-size: 16px; background-color: #fef7c8; color: #666666; font-weight: 500; padding: 11px 12px 12px 12px; display: block; float: left; width: 30px;
+.widgets .events h4{display: none;}
+.widgets .events,
+.widgets .events a{font-family: "Helvetica Neue", "Helvetica", "sans-serif";}
+.widgets .events ol{list-style-type: none;}
+.widgets .events li{margin: 15px 0;}
+.widgets .events .date{text-align: center; font-size: 16px; background-color: #fef7c8; color: #666666; font-weight: 500; padding: 11px 12px 12px 12px; display: block; float: left; width: 30px;
 	-moz-box-shadow: 0px 0px 15px #ccc;
 	-webkit-box-shadow: 0px 0px 15px #ccc;
 	box-shadow: 0px 0px 15px #ccc;
 	font-family: "Helvetica Neue", "Helvetica", "sans-serif";
 }
-.msie #widgets .events .date{display: block; float: left; width: 30px; border: 1px solid #ccc;}
-#widgets .events .date .day{font-size: 24px; display: block; margin-top: 10px;}
-#widgets .events .title{font-size: 14px; padding-left: 10px; display: table-cell;}
-.msie #widgets .events .title{display: block; margin-left: 50px;}
-.msie #widgets .events .end{clear: both;}
-#widgets .events .feeds,
-#widgets .events .more{display: none;}
+.msie .widgets .events .date{display: block; float: left; width: 30px; border: 1px solid #ccc;}
+.widgets .events .date .day{font-size: 24px; display: block; margin-top: 10px;}
+.widgets .events .title{font-size: 14px; padding-left: 10px; display: table-cell;}
+.msie .widgets .events .title{display: block; margin-left: 50px;}
+.msie .widgets .events .end{clear: both;}
+.widgets .events .feeds,
+.widgets .events .more{display: none;}
