--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ ul.none{padding: 0; margin: 0; list-style-type: none;}
 .profile-list  .person .name,
 .profile-list  .person .description{font-family: "Helvetica Neue", "Helvetica", "sans-serif"; display: block;line-height:1.3em;}
 .profile-list  .person .name{font-weight: bold; margin-top: 10px;font-size:13px;}
-.profile-list  .person .description {font-size:11px;}
+.profile-list  .person .description {font-size:11px;margin-top:.4em;}
 .profile-list  .end{clear: both;}
 .profile-list  #academic-officers{}
 .profile-list  #college-deans{}
