Delineate WRC-Provost from WRC

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*   
-Theme Name: Women's Research Center (WRC)
+Theme Name: Women's Research Center (Provost)
 Author: UCF Web Communications
 Github Theme URI: https://github.com/UCF/WRC-WRC
 Template: thematic
