--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ h2, h3, h4{font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif"; co
 .slideshow div { position:absolute; top:0; left:0; z-index:8; opacity:0.0; }
 .slideshow div.active { z-index:10; opacity:1.0; }
 .slideshow div.last-active { z-index:9; }
-.slideshow div .caption {font-size:12px;}
+.slideshow div .caption {font-size:12px;display:none;}
+.slideshow div.active .caption {display:block;}
 
 .document {background: transparent url('static/img/document.png') no-repeat center left; overflow:hidden; padding: 5px 5px 5px 25px;}
 .document a { text-decoration: underline; color: #333;}
