--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 }
 
 #header-menu {font-family:'Georgia',serif;}
+#footer-menu {margin-top:20px;}
 #header-menu,
-#footer-menu {margin-bottom:0;margin-top:20px;font-size:15px;}
+#footer-menu {margin-bottom:0;font-size:15px;}
 #header-menu a,
 #footer-menu a {padding-left:0;margin-left:0;}
 #header-menu a:hover,
@@ -53,46 +54,17 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 }
 
 /* Footer */
+#bottom {padding-top:20px;border-top:1px solid #e1e1e1;margin-top:40px;}
+#bottom h3, #sidebar h3 {font-size:16px;color:#C14D00;font-weight:normal;line-height:1em;margin-bottom:15px;}
+		
 #footer {margin-bottom:20px;}
 #footer #info {text-align:right;}
 
 /* Sidebar */
-#sidebar {padding-top: 75px;}
-#sidebar h3 {font-size:16px;color:#C14D00;font-weight:normal;line-height:1em;margin-bottom:15px;}
+#sidebar {}
 *+html #sidebar #sidebar-events h3 {margin-bottom: 30px; margin-top: 20px;}
 #sidebar ul > li {margin-bottom:7px;}
 #sidebar ul > li > a {font-size:15px;text-decoration:underline}
-
-/* Faculty Resources */
-#faculty-resources .faculty-award-programs {margin-bottom:40px;}
-#faculty-resources .faculty-award-programs a {text-decoration:none;}
-#faculty-resources .faculty-award-programs a img {margin-bottom: 4px;float:left;clear:both;}
-#faculty-resources .faculty-award-programs .caption {font-weight:bold; font-size: 14px;}
-#faculty-resources .resource {margin-bottom:40px;}
-
-/* Faculty Excellence Awards */
-.page-content .table-striped {}
-.page-content .table th, .page-content .table td {
-	border-top: 0;
-}
-.page-content .table-striped tbody tr:nth-child(even) td,
-.page-content .table-striped tbody tr:nth-child(even) th { background-color: #E5ECF9; }
-.page-content .table-striped tbody tr:nth-child(odd) td,
-.page-content .table-striped tbody tr:nth-child(odd) th { background-color: #fff; }
-.page-content .table-striped a {color: #953801;}
-#faculty-excellence-awards .table-striped tbody tr:nth-child(even) td,
-#faculty-excellence-awards .table-striped tbody tr:nth-child(even) th { background-color: #fff; }
-#faculty-excellence-awards .table-striped tbody tr:nth-child(odd) td,
-#faculty-excellence-awards .table-striped tbody tr:nth-child(odd) th { background-color: #E5ECF9; }
-
-/* Academic Affairs */
-#academic-affairs {}
-#academic-affairs #org-chart {}
-#academic-affairs #org-chart h3 small a {color:#953801;}
-#academic-affairs #org-chart .person {width: 110px; float:left; margin-right: 14px; margin-bottom: 20px;}
-#academic-affairs #org-chart .person a {color:#953801;}
-#academic-affairs #org-chart .person .name {font-weight:bold;display:block;}
-#academic-affairs #org-chart .person .row {margin-bottom:25px;}
 
 /* Page Content */
 .page-content a {text-decoration:underline;}
@@ -104,7 +76,7 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 
 /* Home */
 #home.page-content {margin-top:20px;}
-#home #quote p{font-size:20px;text-align:right;line-height:28px;padding-bottom:25px;}
+#home #quote p{font-size:16px;line-height:22px;padding-bottom:25px;}
 #home #announcements {font-size:14px;line-height:18px;padding-bottom:10px;}
 #home #announcements li {margin-bottom:10px;}
 #home #help-search {background-color:#E1E1E1;}
@@ -129,39 +101,6 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 }
 #home #middle img {margin-bottom:4px;}
 #home #middle a {font-size:16px;text-decoration:none;}
-#home #bottom h2 {
-	text-transform:uppercase;
-	font-size:10px;
-	line-height:15px;
-	margin-top:0;
-	margin-bottom:5px;
-	letter-spacing:1.2px;
-}
-#home #bottom h2 {
-	padding: 20px 0 10px 0 !ie;
-}
-#home #home-colleges h3,
-#home #home-units h3 {font-family:'Georgia',serif;color:#666;font-size:21px;font-weight:normal;line-height:26px;}
-#home #home-units {margin-left:19px;border-right:1px solid #e1e1e1;}
-#home .college,
-#home .unit {position:relative; float: left; overflow: hidden; margin: 0 10px 15px 0; width: 110px; height:92px;}
-#home .college .name,
-#home .unit .name {
-	position:absolute;
-	top:0;
-	left:0;
-	display:block;
-	padding: 5px;
-	overflow: hidden;
-	color:#FFF;
-	text-shadow: black 0px 0px 4px;
-	font-weight: 500;
-	width:90px;
-	font-size:13px;
-	text-decoration: none;
-	font-weight: bold;
-}
-#home #bottom #sidebar {padding-top: 0;}
 
 /* Form, Policies, and Procedures */
 #forms-policies-and-procedures .page-content a {color:#953801;}
@@ -233,3 +172,4 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 #profile img { 
 	display:block;
 }
+.person-picture-wrap {width:110px;float:left;margin-left:20px;}
