--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 }
 
 /* Footer */
-#bottom {padding-top:20px;border-top:1px solid #e1e1e1;margin-top:40px;}
+#bottom {margin-top:40px;}
 #bottom h3, #sidebar h3 {font-size:16px;color:#C14D00;font-weight:normal;line-height:1em;margin-bottom:15px;}
-		
+.hr {border-top:1px solid #e1e1e1; height:1px;padding: 10px 0;}		
 #footer {margin-bottom:20px;}
 #footer #info {text-align:right;}
 
