--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ Version: v1.0.1
 
 /* Header */
 #header {margin-top:20px;}
-#header h1 { font-size: 37px; }
 #header h1 a { }
 #header h1 a:hover { color: #333; text-decoration:none; }
 #header section {border-bottom: 1px dotted black;}
@@ -38,11 +37,6 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 #footer-menu .active a {color:inherit;background-color:inherit;}
 #footer-menu a {font-size:13px;}
 #footer-menu li:after {font-size:15px;}
-/*#header-menu li,
-#footer-menu li  {list-style-type:disc;margin-left:8px;}
-#header-menu li:first-child,
-#footer-menu li:first-child {list-style-type:none;margin-left:0;}
-*/
 
 #footer-menu {
 	width:100%;
@@ -56,6 +50,8 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 /* Footer */
 #bottom {margin-top:40px;}
 #bottom h3, #sidebar h3 {font-size:16px;color:#C14D00;font-weight:normal;line-height:1em;margin-bottom:15px;}
+#bottom #bottom-contact { font-size: 12px; line-height: 15px; }
+#bottom #bottom-contact a { text-decoration: underline; }
 .hr {border-top:1px solid #e1e1e1; height:1px;padding: 10px 0;}		
 #footer {margin-bottom:20px;}
 #footer #info {text-align:right;}
@@ -67,15 +63,17 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 #sidebar ul > li > a {font-size:15px;text-decoration:underline}
 
 /* Page Content */
-.page-content a {text-decoration:underline;}
+.page-content a {text-decoration:underline; color: #953801;}
 .page-content article, .page-content p {font-size: 16px; line-height: 24px;}
-.page-content h2 {padding: 10px 0 0 0; font-size:27px;}
+.page-content h1 { font-size: 22px; font-weight: bold; }
+.page-content h2 {padding: 10px 0 0 0; font-size:27px; font-weight:300;}
 .page-content h3 {font-size: 18px;}
 .page-content h4 {font-size: 16px;}
 .page-content p.lead {font-size: 16px; line-height: 24px; font-weight: normal;}
 
 /* Home */
 #home.page-content {margin-top:20px;}
+#home-images-carousel .caption {font-size:12px;line-height:15px;padding-top:5px;}
 #home #quote p{font-size:16px;line-height:22px;padding-bottom:25px;}
 #home #announcements {font-size:14px;line-height:18px;padding-bottom:10px;}
 #home #announcements li {margin-bottom:10px;}
@@ -101,10 +99,6 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 #home #middle a {font-size:16px;text-decoration:none;}
 #home + #bottom {margin-top:0;}
 
-/* Form, Policies, and Procedures */
-#forms-policies-and-procedures .page-content a {color:#953801;}
-#forms-policies-and-procedures .document {margin-left:30px;}
-
 /* Document Styling */
 .powerpoint,
 .missing,
@@ -123,6 +117,8 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 .html{background-position: 0 -126px;}
 
 .document {padding-left: 25px;font-size:16px;margin-bottom:12px;width:100%;}
+
+.wrc_form-list { list-style-type:none; }
 
 /* Events */
 .events {border-spacing: 0 20px; border-collapse:separate;margin-top:-15px;}
@@ -151,10 +147,6 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 #search-results #result-list li.even {background-color:#e7e7e7;padding:;}
 #search-results {}
 
-/* Provost Updates */
-#provost-updates .page-content a {color:#953801;}
-#provost-updates .provost_update-list li {font-size:16px;margin-bottom:10px;margin-left:20px;}
-
 /* Profile */
 #profile {
 	width:120px;
@@ -172,3 +164,5 @@ ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
 	display:block;
 }
 .person-picture-wrap {width:110px;float:left;margin-left:20px;margin-bottom:20px;}
+.person-picture-wrap a { font-weight:bold; margin-top: 10px; color: #953801; font-size: 13px; }
+.person-picture-wrap .description { font-size: 11px; line-height: 15px; }
