--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -60,3 +60,7 @@ body.login #login h1 a .hide{display: block;}
 #theme-help table {border-collapse:collapse;}
 #theme-help table th, #theme-help table td {border:1px solid #333;padding:5px;}
 #theme-help table th {background-color:#f1f1f1;}
+
+
+/** Hide the empty Home Image Field in the Home Image editor **/
+#wrc_home_images_metabox { display: none; }
